--- a/2024_ADS_TopEsp/nbproject/project.properties
+++ b/2024_ADS_TopEsp/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=2024_ADS_TopEsp
-main.class=visao.Principal
+main.class=visao.ClienteCadastrar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
